--- a/reminder_app/pubspec.yaml
+++ b/reminder_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.1
   provider: ^6.0.5
+  firebase_ui_auth: ^1.4.3
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
